feat(docs): add Swagger/OpenAPI configuration for API documentation and testing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,12 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# OpenAPI JSON dokümantasyonu path'i
+springdoc.api-docs.path=/api-docs
+
+# Swagger UI path'i
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# Endpoint'lerin s?ralanma yöntemi (GET, POST, PUT, DELETE s?ras?yla)
+springdoc.swagger-ui.operations-sorter=method
